# record

./: .buildinfo  CMakeLists.txt  README.md  genindex.html  index.html  iterator.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  iterator.doctree
.github/workflows/: build.yaml  docs.yaml
_sources/: index.md.txt
docs/: CMakeLists.txt
docs/sphinx/: conf.py.in  iterator.md
include/core/record/: iterator.h  record.h
src/tools/: record0.cpp  record1.cpp
test/: CMakeLists.txt
test/src/core/record/: test_record_basic.cpp  test_record_iterator_interface.cpp
